# swing-trading-report

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PRD.md  README.md  ROADMAP.md  TODO.md  config.example.yaml  config.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PRD.md  config-migration.md  daily-candle-evaluation-design.md  holdings-schema.md  kis-setup.md  report-spec.md  review-2026-02-06.md  runbook.md  swing-trading-manual.md
docs/adr/: ADR-0001-config-precedence.md
docs/design/: kis-integration.md  reports.md  sell-us.md  signals.md
docs/reviews/: README.md
sab/: __main__.py  config.py  config_loader.py  env_loader.py  fx.py  holdings_loader.py  scan.py  sell.py
sab/data/: cache.py  holiday_cache.py  kis_client.py  kr_calendar.py  pykrx_client.py
sab/report/: markdown.py  sell_report.py  time_label.py
sab/screener/: __init__.py  kis_screener.py  (+2 more)
tests/: conftest.py  test_atomic_io.py  test_config_field_uniqueness.py  test_config_loader_fail_closed.py  test_config_secret_policy.py  test_env_loader.py  test_etf_filters.py  test_eval_index.py  test_holdings_loader_fail_closed.py  test_holiday_cache.py  test_hybrid_buy_state.py  test_hybrid_sell_profit_tiers.py  test_kis_client_overseas_rank.py  test_kis_overseas_screener_nday.py  test_kr_calendar.py  test_logging_config.py  test_market_time_session.py  test_report_atomicity.py  test_scan_log_helpers.py  test_scan_sell_fail_closed.py  test_scan_us_holidays_call.py  test_scan_us_screener_meta_etf.py  test_scan_us_screener_nday.py  test_sell_rules_atr_trailing_stop.py
(+10 files in other folders)
