[project]
name = "swing-trading-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dotenv = [
    "python-dotenv>=1.2.1",
]
calendar = [
    "pandas-market-calendars>=5.1.3",
]
pykrx = [
    "pykrx>=1.0.0",
]
full = [
    "python-dotenv>=1.2.1",
    "pandas-market-calendars>=5.1.3",
    "pykrx>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "mypy>=1.19.1",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["sab", "tests"]
extend-exclude = [
    "data",
    "reports",
    ".pre-commit-cache",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "SIM"
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
pretty = true
show_error_codes = true
ignore_missing_imports = true
warn_unused_configs = true
exclude = [
    "^tests/",
]
